--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "vite --mode dev",
+    "pro": "vite --mode pro",
+    "build:dev": "vite build --mode dev",
+    "build:pro": "vite build --mode pro",
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "element-plus": "^2.3.14",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
