--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "mytools-vue",
   "private": true,
-  "version": "2.3",
+  "version": "2.5",
   "type": "module",
   "scripts": {
     "dev": "rsbuild dev --env-mode development",
     "pro": "rsbuild dev --env-mode production",
     "build": "rsbuild build",
-    "preview": "rsbuild preview"
+    "preview": "rsbuild preview",
+    "check": "biome check --write",
+    "format": "biome format --write"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
@@ -21,6 +23,8 @@
     "@rsbuild/plugin-stylus": "^1.1.1",
     "@rsbuild/plugin-vue": "^1.0.7",
     "stylus": "^0.62.0",
-    "stylus-loader": "^7.1.3"
+    "stylus-loader": "^7.1.3",
+    "typescript": "^5.8.3",
+    "@biomejs/biome": "^1.9.4"
   }
 }
