--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,9 @@
 {
   "compilerOptions": {
-    "lib": ["DOM", "ES2020"],
-    "jsx": "preserve",
-    "target": "ES2020",
+    "lib": ["DOM", "ESNext"],
+    "target": "ESNext",
     "noEmit": true,
     "skipLibCheck": true,
-    "jsxImportSource": "vue",
     "useDefineForClassFields": true,
 
     /* modules */
@@ -20,5 +18,6 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
